test/fail/built-in-functions.app
//#9 collides with a generated function

application test

page root(){}

function cancel {}
function cancel( i: Int ){}
function cancel( i: Int, s: String ){}

function replace {}
function replace( i: Int ){}
function replace(i:Int,s:String){}

function rollback {}
function rollback( i: Int ){}
function rollback( i: Int, s: String ){}